--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,20 @@ hr {
     -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1)
 }
 
+.filter-sticky{
+        left: 75px;
+        background-color: white;
+        margin: auto;
+        position: fixed;
+        top: 90px;
+        width: 30%;
+        -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
+        box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
+        z-index: 9998;
+        -webkit-animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
+        animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
+        -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1)
+    }
 .preloader {
     background-color: #f7f7f7;
     width: 100%;
