--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,20 @@
 
 
 
+::-webkit-scrollbar{
+    width: 10px;
+}
+
+::-webkit-scrollbar-track{
+    box-shadow: inset 0px 0px 5px grey;
+    border-radius: 5px;
+}
+
+::-webkit-scrollbar-thumb{
+    background-color: #84bce5;
+    border-radius: 5px;
+
+}
 
 .section-bg2 {
     background-color: #F3EAD8
@@ -289,18 +303,19 @@ hr {
 }
 
 .filter-sticky{
-        left: 75px;
+        left: 5vw;
         background-color: white;
         margin: auto;
         position: fixed;
         top: 90px;
-        width: 30%;
+        width: 30vw;
         -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
         box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
         z-index: 9998;
         -webkit-animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
         animation: 300ms ease-in-out 0s normal none 1 running fadeInDown;
-        -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1)
+        -webkit-box-shadow: 0 10px 15px rgba(25, 25, 25, 0.1);
+        overflow: auto;
     }
 .preloader {
     background-color: #f7f7f7;
